--- a/src/templates/mem.html
+++ b/src/templates/mem.html
@@ -42,7 +42,9 @@
                     </rd-widget-header>
                     <rd-widget-body classes="">
                         <h4 class="no-top-margin">Swap usage</h4>
+                        {{currentSwapPercentage}}
                         <div class="progress">
+
                             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:{{ currentSwapPercentage | number:0}}%"
                              ng-class="
                                 {
@@ -51,7 +53,7 @@
                                     'progress-bar-danger':  currentSwapPercentage > 66
                                 }"
                             >
-                              {{ currentSwapPercentage | number:0}}%
+                                <span ng-class="{'memLoadColour': (currentSwapPercentage | number:0) == 0}">{{ currentSwapPercentage | number:0}}%</span>
                             </div>
                          </div>
 
