--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,10 +2,13 @@ body{
     line-height: normal;
 }
 
-.page-content{
-    padding-top: 20px;
+.normalIcon{
+    font-size: 15px !important;
+    line-height: 20px !important;
 }
-
+.no-padding{
+    padding: 0px;
+}
 .wrap{
     word-wrap: break-word;
 }
